# notification_ans_standard

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  mgit.info  notification.gni  ohos.build
frameworks/ans/core/: BUILD.gn
frameworks/ans/core/include/: ans_image_util.h  ans_manager_death_recipient.h  ans_manager_interface.h  ans_manager_proxy.h  ans_manager_stub.h  ans_notification.h  ans_subscriber_interface.h  ans_subscriber_proxy.h  ans_subscriber_stub.h
frameworks/ans/core/src/: ans_image_util.cpp  ans_manager_death_recipient.cpp  ans_manager_proxy.cpp  ans_manager_stub.cpp  ans_notification.cpp  ans_subscriber_proxy.cpp  ans_subscriber_stub.cpp
frameworks/ans/native/: BUILD.gn
frameworks/ans/native/src/: enabled_notification_callback_data.cpp  message_user.cpp  notification.cpp  notification_action_button.cpp  notification_basic_content.cpp  notification_bundle_option.cpp  notification_constant.cpp  notification_content.cpp  notification_conversational_content.cpp  notification_conversational_message.cpp  notification_distributed_options.cpp  notification_do_not_disturb_date.cpp  notification_flags.cpp  notification_helper.cpp  notification_long_text_content.cpp  notification_media_content.cpp  notification_multiline_content.cpp  notification_normal_content.cpp  notification_picture_content.cpp  notification_request.cpp  notification_slot.cpp  notification_slot_group.cpp  notification_sorting.cpp  notification_sorting_map.cpp  notification_subscribe_info.cpp  notification_subscriber.cpp  notification_template.cpp  notification_user_input.cpp  reminder_helper.cpp  reminder_request.cpp  reminder_request_alarm.cpp  reminder_request_calendar.cpp  reminder_request_timer.cpp  reminder_store.cpp
frameworks/ans/test/moduletest/: BUILD.gn  ReminderHelperTest.js  (+7 more)
frameworks/core/: BUILD.gn
frameworks/core/include/: ans_image_util.h  ans_manager_death_recipient.h  ans_manager_interface.h  ans_manager_proxy.h  ans_manager_stub.h  ans_notification.h  ans_subscriber_interface.h  ans_subscriber_proxy.h  ans_subscriber_stub.h
frameworks/core/src/: ans_image_util.cpp  ans_manager_proxy.cpp  ans_manager_stub.cpp  ans_notification.cpp  ans_subscriber_proxy.cpp  ans_subscriber_stub.cpp
frameworks/wantagent/: BUILD.gn
frameworks/wantagent/src/: completed_dispatcher.cpp  pending_want.cpp  trigger_info.cpp  want_agent.cpp  want_agent_helper.cpp  want_agent_info.cpp  want_agent_log_wrapper.cpp
innerkits/: BUILD.gn
innerkits/base/include/: ans_const_define.h  ans_inner_errors.h
innerkits/core/include/: ans_manager_death_recipient.h  ans_manager_interface.h  ans_manager_proxy.h  ans_manager_stub.h  ans_notification.h  ans_subscriber_interface.h  ans_subscriber_proxy.h  ans_subscriber_stub.h
innerkits/core/src/: ans_manager_death_recipient.cpp  ans_manager_proxy.cpp  ans_manager_stub.cpp  ans_notification.cpp  ans_subscriber_proxy.cpp
kits/native/: BUILD.gn
kits/native/include/: message_user.h  notification.h  notification_action_button.h  notification_basic_content.h  notification_constant.h  notification_content.h  notification_conversational_content.h  notification_conversational_message.h  notification_helper.h  notification_long_text_content.h  notification_normal_content.h  notification_picture_content.h  notification_slot.h  notification_sorting.h  notification_sorting_map.h  notification_subscribe_info.h  notification_subscriber.h
kits/native/src/: notification.cpp  notification_action_button.cpp  notification_basic_content.cpp  notification_constant.cpp  notification_long_text_content.cpp  notification_picture_content.cpp  notification_slot.cpp  notification_subscribe_info.cpp  notification_subscriber.cpp
kits/native/wantagent/: BUILD.gn
services/ans/: BUILD.gn
services/ans/include/: access_token_helper.h  advanced_notification_service.h  advanced_notification_service_ability.h  bundle_manager_helper.h  distributed_kvstore_death_recipient.h  disturb_filter.h  interface_system_event.h  notification_filter.h  notification_preferences.h  notification_preferences_database.h  notification_preferences_info.h  notification_record.h  notification_slot_filter.h  notification_subscriber_manager.h  permission_filter.h  preferences_constant.h  reminder_data_manager.h  reminder_event_manager.h  reminder_timer_info.h  remote_death_recipient.h  system_event_observer.h  system_event_subscriber.h
services/ans/resource/: external.json
services/ans/src/: access_token_helper.cpp  advanced_notification_service.cpp  advanced_notification_service_ability.cpp  bundle_manager_helper.cpp  disturb_filter.cpp  notification_preferences.cpp  notification_preferences_database.cpp  notification_preferences_info.cpp  notification_slot_filter.cpp  notification_subscriber_manager.cpp  permission_filter.cpp  reminder_data_manager.cpp  reminder_event_manager.cpp  reminder_timer_info.cpp  system_event_observer.cpp
services/distributed/: BUILD.gn
services/distributed/include/: distributed_database.h  distributed_database_callback.h  distributed_device_callback.h  distributed_flow_control.h  distributed_notification_manager.h  distributed_preferences.h  distributed_preferences_database.h  distributed_preferences_info.h  distributed_screen_status_manager.h
services/distributed/src/: distributed_database.cpp  distributed_database_callback.cpp  distributed_device_callback.cpp  distributed_flow_control.cpp  distributed_notification_manager.cpp  distributed_preferences.cpp  distributed_preferences_database.cpp  distributed_preferences_info.cpp  distributed_screen_status_manager.cpp
services/test/moduletest/: BUILD.gn  ans_module_test.cpp
test/bechmarktest/notification_publish_test/: BUILD.gn  notification_publish_test.cpp
test/fuzztest/removenotificationslot_fuzzer/: BUILD.gn  removenotificationslot_fuzzer.cpp  removenotificationslot_fuzzer.h
test/resource/ansSTSlotGroupTest/: BUILD.gn  config.json
tools/dump/: BUILD.gn
tools/dump/include/: notification_shell_command.h  shell_command.h
tools/dump/src/: main.cpp  notification_shell_command.cpp  shell_command.cpp
(+456 files in other folders)
