# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ans_standard_path = "//base/notification/ans_standard"

services_path = "${ans_standard_path}/services"

frameworks_path = "${ans_standard_path}/frameworks"

interfaces_path = "${ans_standard_path}/interfaces"

core_path = "${frameworks_path}/ans/core"

test_path = "${ans_standard_path}/test"

tools_path = "${ans_standard_path}/tools"

aafwk_path = "//foundation/aafwk/standard"

ans_standard_external_deps = [
  "aafwk_standard:base",
  "aafwk_standard:want",
  "appexecfwk_standard:appexecfwk_base",
  "appexecfwk_standard:appexecfwk_core",
  "appexecfwk_standard:libeventhandler",
  "ces_standard:cesfwk_innerkits",
  "dmsfwk_standard:zuri",
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
  "safwk:system_ability_fwk",
  "samgr_L2:samgr_proxy",
]
