# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

aafwk_inner_api_path =
    "//foundation/ability/ability_runtime/interfaces/innerkits"
aafwk_services_path = "//foundation/ability/ability_runtime/services"
aafwk_kits_path = "//foundation/ability/ability_runtime/frameworks/kits"
component_name = "distributed_notification_service"
component_path = "//base/notification/distributed_notification_service"
services_path = "${component_path}/services"
frameworks_path = "${component_path}/frameworks"
frameworks_module_ans_path = "${frameworks_path}/ans"
interfaces_path = "${component_path}/interfaces"
inner_api_path = "${interfaces_path}/inner_api"
core_path = "${frameworks_path}/core"
test_path = "${component_path}/test"
tools_path = "${component_path}/tools"
aafwk_path = "//foundation/ability/ability_runtime"
distributed_notification_supported = true
subsystem_name = "notification"
component_external_deps = [
  "ability_base:base",
  "ability_base:want",
  "ability_base:zuri",
  "bundle_framework:appexecfwk_base",
  "bundle_framework:appexecfwk_core",
  "common_event_service:cesfwk_innerkits",
  "eventhandler:libeventhandler",
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
  "safwk:system_ability_fwk",
  "samgr_standard:samgr_proxy",
]
