# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/notification/ans_standard/notification.gni")
import("//build/ohos.gni")

ANS_STANDARD_INNERKITS_CORE_PATH = "${innerkits_path}/core"
ANS_STANDARD_INNERKITS_BASE_PATH = "${innerkits_path}/base"

group("innerkits_target") {
  deps = [ ":ans_innerkits" ]
}

config("private_config") {
  include_dirs = [ "//utils/system/safwk/native/include" ]
}

config("public_ans_innerkits_config") {
  include_dirs = [
    "${ANS_STANDARD_INNERKITS_CORE_PATH}/include",
    "${ANS_STANDARD_INNERKITS_BASE_PATH}/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include",
    "${kits_path}/native/include",
    "//utils/native/base/include",
  ]
}

ohos_shared_library("ans_innerkits") {
  sources = [
    "${ANS_STANDARD_INNERKITS_BASE_PATH}/src/ans_log_wrapper.cpp",
    "${ANS_STANDARD_INNERKITS_CORE_PATH}/src/ans_manager_death_recipient.cpp",
    "${ANS_STANDARD_INNERKITS_CORE_PATH}/src/ans_manager_proxy.cpp",
    "${ANS_STANDARD_INNERKITS_CORE_PATH}/src/ans_manager_stub.cpp",
    "${ANS_STANDARD_INNERKITS_CORE_PATH}/src/ans_notification.cpp",
    "${ANS_STANDARD_INNERKITS_CORE_PATH}/src/ans_subscriber_proxy.cpp",
    "${ANS_STANDARD_INNERKITS_CORE_PATH}/src/ans_subscriber_stub.cpp",
    "${kits_path}/native/src/message_user.cpp",
    "${kits_path}/native/src/notification.cpp",
    "${kits_path}/native/src/notification_action_button.cpp",
    "${kits_path}/native/src/notification_basic_content.cpp",
    "${kits_path}/native/src/notification_constant.cpp",
    "${kits_path}/native/src/notification_content.cpp",
    "${kits_path}/native/src/notification_conversational_content.cpp",
    "${kits_path}/native/src/notification_conversational_message.cpp",
    "${kits_path}/native/src/notification_helper.cpp",
    "${kits_path}/native/src/notification_long_text_content.cpp",
    "${kits_path}/native/src/notification_media_content.cpp",
    "${kits_path}/native/src/notification_multiline_content.cpp",
    "${kits_path}/native/src/notification_normal_content.cpp",
    "${kits_path}/native/src/notification_picture_content.cpp",
    "${kits_path}/native/src/notification_request.cpp",
    "${kits_path}/native/src/notification_slot.cpp",
    "${kits_path}/native/src/notification_slot_group.cpp",
    "${kits_path}/native/src/notification_sorting.cpp",
    "${kits_path}/native/src/notification_sorting_map.cpp",
    "${kits_path}/native/src/notification_subscribe_info.cpp",
    "${kits_path}/native/src/notification_subscriber.cpp",
    "${kits_path}/native/src/notification_user_input.cpp",
  ]

  configs = [ ":private_config" ]

  public_configs = [ ":public_ans_innerkits_config" ]

  deps = [
    "${kits_path}/native/wantagent:wantagent_kits",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_L2:samgr_proxy",
  ]

  part_name = "ans_standard"
  subsystem_name = "notification"
}
