# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")

config("private_config") {
  include_dirs = [ "//utils/system/safwk/native/include" ]
}

config("public_ans_core_config") {
  include_dirs = [
    "${core_path}/common/include",
    "${core_path}/include",
    "${inner_api_path}",

    "//utils/native/base/include",
    "//third_party/json/single_include",
    "//third_party/jsoncpp/include",
  ]
}

ohos_shared_library("ans_core") {
  sources = [
    "${core_path}/common/src/ans_log_wrapper.cpp",
    "${core_path}/common/src/ans_watchdog.cpp",
    "${core_path}/src/ans_image_util.cpp",
    "${core_path}/src/ans_manager_death_recipient.cpp",
    "${core_path}/src/ans_manager_proxy.cpp",
    "${core_path}/src/ans_manager_stub.cpp",
    "${core_path}/src/ans_notification.cpp",
    "${core_path}/src/ans_subscriber_proxy.cpp",
    "${core_path}/src/ans_subscriber_stub.cpp",
    "${frameworks_module_ans_path}/src/enabled_notification_callback_data.cpp",
    "${frameworks_module_ans_path}/src/message_user.cpp",
    "${frameworks_module_ans_path}/src/notification.cpp",
    "${frameworks_module_ans_path}/src/notification_action_button.cpp",
    "${frameworks_module_ans_path}/src/notification_basic_content.cpp",
    "${frameworks_module_ans_path}/src/notification_bundle_option.cpp",
    "${frameworks_module_ans_path}/src/notification_constant.cpp",
    "${frameworks_module_ans_path}/src/notification_content.cpp",
    "${frameworks_module_ans_path}/src/notification_conversational_content.cpp",
    "${frameworks_module_ans_path}/src/notification_conversational_message.cpp",
    "${frameworks_module_ans_path}/src/notification_distributed_options.cpp",
    "${frameworks_module_ans_path}/src/notification_do_not_disturb_date.cpp",
    "${frameworks_module_ans_path}/src/notification_flags.cpp",
    "${frameworks_module_ans_path}/src/notification_helper.cpp",
    "${frameworks_module_ans_path}/src/notification_long_text_content.cpp",
    "${frameworks_module_ans_path}/src/notification_media_content.cpp",
    "${frameworks_module_ans_path}/src/notification_multiline_content.cpp",
    "${frameworks_module_ans_path}/src/notification_normal_content.cpp",
    "${frameworks_module_ans_path}/src/notification_picture_content.cpp",
    "${frameworks_module_ans_path}/src/notification_request.cpp",
    "${frameworks_module_ans_path}/src/notification_slot.cpp",
    "${frameworks_module_ans_path}/src/notification_slot_group.cpp",
    "${frameworks_module_ans_path}/src/notification_sorting.cpp",
    "${frameworks_module_ans_path}/src/notification_sorting_map.cpp",
    "${frameworks_module_ans_path}/src/notification_subscribe_info.cpp",
    "${frameworks_module_ans_path}/src/notification_subscriber.cpp",
    "${frameworks_module_ans_path}/src/notification_template.cpp",
    "${frameworks_module_ans_path}/src/notification_user_input.cpp",
    "${frameworks_module_ans_path}/src/reminder_helper.cpp",
    "${frameworks_module_ans_path}/src/reminder_request.cpp",
    "${frameworks_module_ans_path}/src/reminder_request_alarm.cpp",
    "${frameworks_module_ans_path}/src/reminder_request_calendar.cpp",
    "${frameworks_module_ans_path}/src/reminder_request_timer.cpp",
    "${frameworks_module_ans_path}/src/reminder_store.cpp",
  ]

  configs = [ ":private_config" ]

  public_configs = [ ":public_ans_core_config" ]

  deps = [
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "eventhandler:libeventhandler",
    "hicollie_native:libhicollie",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "os_account:os_account_innerkits",
    "relational_store:native_rdb",
    "samgr_standard:samgr_proxy",
    "time_native:time_service",
  ]

  part_name = "${component_name}"
  subsystem_name = "${subsystem_name}"
}
