# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ans_standard/notification.gni")
import("//build/ohos.gni")

config("ans_distributed_config") {
  include_dirs = [
    "${services_path}/distributed/include",
    "//utils/native/base/include",
  ]
}

ohos_shared_library("libans_distributed") {
  sources = [
    "src/distributed_database.cpp",
    "src/distributed_database_callback.cpp",
    "src/distributed_device_callback.cpp",
    "src/distributed_flow_control.cpp",
    "src/distributed_notification_manager.cpp",
    "src/distributed_preferences.cpp",
    "src/distributed_preferences_database.cpp",
    "src/distributed_preferences_info.cpp",
    "src/distributed_screen_status_manager.cpp",
  ]

  include_dirs = [ "include" ]

  configs = [
    ":ans_distributed_config",
    "${core_path}:public_ans_core_config",
    "${frameworks_path}/ans/native:ans_innerkits_public_config",
  ]

  deps = [ "${core_path}:ans_core" ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "distributeddatamgr:distributeddata_inner",
    "dmsfwk_standard:zuri",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "utils_base:utils",
  ]

  subsystem_name = "notification"
  part_name = "ans_standard"
}
