# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ans_standard/notification.gni")
import("//build/ohos.gni")

group("anm_target") {
  deps = [ ":anm" ]
}

ohos_executable("anm") {
  include_dirs = [ "${tools_path}/dump/include" ]

  sources = [
    "${aafwk_path}/tools/aa/src/shell_command.cpp",
    "src/main.cpp",
    "src/notification_shell_command.cpp",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${core_path}:ans_core",
    "//utils/native/base:utils",
  ]

  configs = [
    "${core_path}:public_ans_core_config",
    "${frameworks_path}/wantagent:wantagent_innerkits_public_config",
    "${aafwk_path}/tools/aa:ability_command_config",
    "${aafwk_path}/services/common:common_config",
  ]

  external_deps = []
  external_deps += ans_standard_external_deps

  install_enable = true
  part_name = "ans_standard"
  subsystem_name = "notification"
}
