# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/notification/ans_standard/notification.gni")
import("//build/ohos.gni")

group("ans_core_target") {
  deps = [ ":ans_core" ]
}

config("private_config") {
  include_dirs = [ "//utils/system/safwk/native/include" ]
}

config("public_ans_core_config") {
  include_dirs = [
    "${core_path}/common/include",
    "${core_path}/include",
    "${interfaces_path}/innerkits/ans/native/include",
    "${interfaces_path}/innerkits/wantAgent/include",
    "//utils/native/base/include",
    "//third_party/json/single_include",
    "//third_party/jsoncpp/include",
  ]

  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("ans_core") {
  sources = [
    "${core_path}/common/src/ans_log_wrapper.cpp",
    "${core_path}/src/ans_image_util.cpp",
    "${core_path}/src/ans_manager_death_recipient.cpp",
    "${core_path}/src/ans_manager_proxy.cpp",
    "${core_path}/src/ans_manager_stub.cpp",
    "${core_path}/src/ans_notification.cpp",
    "${core_path}/src/ans_subscriber_proxy.cpp",
    "${core_path}/src/ans_subscriber_stub.cpp",
    "${frameworks_path}/ans/native/src/enabled_notification_callback_data.cpp",
    "${frameworks_path}/ans/native/src/message_user.cpp",
    "${frameworks_path}/ans/native/src/notification.cpp",
    "${frameworks_path}/ans/native/src/notification_action_button.cpp",
    "${frameworks_path}/ans/native/src/notification_basic_content.cpp",
    "${frameworks_path}/ans/native/src/notification_bundle_option.cpp",
    "${frameworks_path}/ans/native/src/notification_constant.cpp",
    "${frameworks_path}/ans/native/src/notification_content.cpp",
    "${frameworks_path}/ans/native/src/notification_conversational_content.cpp",
    "${frameworks_path}/ans/native/src/notification_conversational_message.cpp",
    "${frameworks_path}/ans/native/src/notification_distributed_options.cpp",
    "${frameworks_path}/ans/native/src/notification_do_not_disturb_date.cpp",
    "${frameworks_path}/ans/native/src/notification_flags.cpp",
    "${frameworks_path}/ans/native/src/notification_helper.cpp",
    "${frameworks_path}/ans/native/src/notification_long_text_content.cpp",
    "${frameworks_path}/ans/native/src/notification_media_content.cpp",
    "${frameworks_path}/ans/native/src/notification_multiline_content.cpp",
    "${frameworks_path}/ans/native/src/notification_normal_content.cpp",
    "${frameworks_path}/ans/native/src/notification_picture_content.cpp",
    "${frameworks_path}/ans/native/src/notification_request.cpp",
    "${frameworks_path}/ans/native/src/notification_slot.cpp",
    "${frameworks_path}/ans/native/src/notification_slot_group.cpp",
    "${frameworks_path}/ans/native/src/notification_sorting.cpp",
    "${frameworks_path}/ans/native/src/notification_sorting_map.cpp",
    "${frameworks_path}/ans/native/src/notification_subscribe_info.cpp",
    "${frameworks_path}/ans/native/src/notification_subscriber.cpp",
    "${frameworks_path}/ans/native/src/notification_template.cpp",
    "${frameworks_path}/ans/native/src/notification_user_input.cpp",
    "${frameworks_path}/ans/native/src/reminder_helper.cpp",
    "${frameworks_path}/ans/native/src/reminder_request.cpp",
    "${frameworks_path}/ans/native/src/reminder_request_alarm.cpp",
    "${frameworks_path}/ans/native/src/reminder_request_calendar.cpp",
    "${frameworks_path}/ans/native/src/reminder_request_timer.cpp",
  ]

  configs = [ ":private_config" ]

  public_configs = [ ":public_ans_core_config" ]

  deps = [
    "${frameworks_path}/wantagent:wantagent_innerkits",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "dmsfwk_standard:zuri",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "os_account_standard:os_account_innerkits",
    "samgr_standard:samgr_proxy",
    "time_native:time_service",
  ]

  part_name = "ans_standard"
  subsystem_name = "notification"
}
