# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ans_standard/notification.gni")
import("//build/ohos.gni")

group("native_targets") {
  deps = [ ":ans_innerkits" ]
}

config("ans_innerkits_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${interfaces_path}/innerkits/ans/native/include",
    "${frameworks_path}/ans/core/common/include",
    "${frameworks_path}/ans/core/include",
    "//third_party/json/single_include",
    "//third_party/jsoncpp/include",
    "//utils/system/safwk/native/include",
  ]
  configs = [ "${frameworks_path}/wantagent:wantagent_innerkits_public_config" ]
}

ohos_shared_library("ans_innerkits") {
  include_dirs = [
    "${interfaces_path}/innerkits/ans/native/include",
    "//utils/system/safwk/native/include",
    "//third_party/jsoncpp/include",
  ]

  sources = [
    "src/enabled_notification_callback_data.cpp",
    "src/message_user.cpp",
    "src/notification.cpp",
    "src/notification_action_button.cpp",
    "src/notification_basic_content.cpp",
    "src/notification_bundle_option.cpp",
    "src/notification_constant.cpp",
    "src/notification_content.cpp",
    "src/notification_conversational_content.cpp",
    "src/notification_conversational_message.cpp",
    "src/notification_distributed_options.cpp",
    "src/notification_do_not_disturb_date.cpp",
    "src/notification_flags.cpp",
    "src/notification_helper.cpp",
    "src/notification_long_text_content.cpp",
    "src/notification_media_content.cpp",
    "src/notification_multiline_content.cpp",
    "src/notification_normal_content.cpp",
    "src/notification_picture_content.cpp",
    "src/notification_request.cpp",
    "src/notification_slot.cpp",
    "src/notification_slot_group.cpp",
    "src/notification_sorting.cpp",
    "src/notification_sorting_map.cpp",
    "src/notification_subscribe_info.cpp",
    "src/notification_subscriber.cpp",
    "src/notification_template.cpp",
    "src/notification_user_input.cpp",
  ]

  configs = [
    "//utils/native/base:utils_config",
    "${core_path}:public_ans_core_config",
  ]

  public_configs = [ ":ans_innerkits_public_config" ]

  deps = [
    "${frameworks_path}/ans/core:ans_core",
    "${frameworks_path}/wantagent:wantagent_innerkits",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "dmsfwk_standard:zuri",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "samgr_standard:samgr_proxy",
  ]

  if (is_double_framework) {
    cflags = [ "-DCONFIG_DUAL_FRAMEWORK" ]
  }

  subsystem_name = "notification"
  part_name = "ans_standard"
}
